[package]
name = "comuney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket ={ version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.13.0"
chrono = "0.4.19"
jsonwebtoken = "8.1.0"